[package]
name = "DSOpenGraph-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
scraper = "0.20.0"
serde_json = "1.0.127"
actix-web = "4.9.0"
dotenv = "0.15.0"
colored = "2.1.0"
env_logger = "0.11.5"
log = "0.4.22"
thiserror = "1.0.63"
lazy_static = "1.5.0"
async-trait = "0.1"
chrono = "0.4.38"
sqlx-core = "0.8.1"

[dependencies.serde]
version = "1.0.209"
features = ["derive"]

[dependencies.sqlx]
version = "0.8.1"
features = ["sqlite", "runtime-async-std", "chrono"]

[dependencies.reqwest]
version = "0.12.7"
features = ["json"]

[dependencies.tokio]
version = "1.39.3"
features = ["rt", "rt-multi-thread", "macros"]

[profile.release]
opt-level = 3
overflow-checks = true
debug = false
panic = "abort"
lto = "fat"
debug-assertions = false
incremental = false